# flow-state-monitor

./: .env.example  COPILOT_SPEC_IMPLEMENTATION.md  GITHUB_PACKAGES_AUTH.md  IBKR_QUICK_REFERENCE.md  ORTEX_QUICK_REFERENCE.md  PACKAGE_INSTALLATION.md  PHILOSOPHY.md  PRIVATE_PACKAGE_SETUP.md  QUICK_REFERENCE_PACKAGE.md  README.md  TEST_KEY_USAGE.md  check_ibkr_connection.py  check_ortex_connection.py  pyproject.toml  test_buy_signal.py  test_copilot_spec.py  test_ortex_api.py
.github/: release-body.md
.github/workflows/: build-test.yml  publish-package.yml
config/: default_config.yaml
docs/: architecture.md  design_specification.md  money_flow_vs_narrative.md  relative_strength.md
examples/: alpaca_usage.py  copilot_spec_demo.py  flow_off_example.csv  flow_on_example.csv  flow_weakening_example.csv  ibkr_borrow_usage.py  ibkr_usage.py  ortex_usage.py  relative_strength_example.py  sample_prices.csv
src/flow_state_monitor/: __init__.py  __main__.py  alpaca_data.py  borrow_delta.py  borrow_level.py  borrow_momentum.py  cli.py  config.py  ibkr_borrow_data.py  ibkr_data.py  market_context.py  market_state.py  monitor.py  ortex_data.py  price_behavior.py  signals.py
tests/: conftest.py  test_borrow_delta.py  test_borrow_level.py  test_borrow_momentum.py  test_config.py  test_ibkr_borrow_data.py  test_ibkr_data.py  test_monitor.py  test_ortex_data.py  test_price_behavior.py
